--- a/de/vorlesung/projekt/teamKoma/html/index.html
+++ b/de/vorlesung/projekt/teamKoma/html/index.html
@@ -21,7 +21,7 @@
 		  </div>
 		  <div class="flex-column">
         <br>
-        <button type="button" class="btn btn-primary btn-sm">Login</button> 
+        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#loginModal">Login</button> 
 		  </div>
     </div>
     <div class="row justify-content-center align-items-center">
@@ -31,8 +31,95 @@
             <img src="assets/img/banner.png" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-2">
+        </div>   
+    </div>
+    <br>
+    <br>
+
+    <form action="/submitNew" method="post">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-6">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="">First and last name</span>
+          </div>
+          <input type="text" class="form-control">
+          <input type="text" class="form-control">
         </div>
-        
+      </div>
+      <div class="col">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-6">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-default">E-Mail</span>
+          </div>
+          <input type="email" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+        </div>
+      </div>
+      <div class="col">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+          <label for="subject">Subject</label>
+          <input type="text" class="form-control" id="subject" placeholder="Your Subject"> 
+    </div>
+    <br>
+    <div class="row">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" rows="15"></textarea>
+    </div>
+    <br>
+    <div class= "row justify-content-center">
+      <div class="col"></div>
+      <div class="col-6 text-center">
+          <input type="submit" class="btn btn-primary btn-lg btn-block" value="Submit new Ticket">
+      </div>
+      <div class="col"></div>
+    </div>
+    </form>
+    <br>
+    <footer class="footer">
+        <div class="container">
+          <span class="text-muted">INF16A TeamKoma || Programmieren in Go (Doz. H. Nemann) || 2018</span>
+        </div>
+      </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">Login</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form action="/login" method="post">
+              <div class="form-group">
+                  <label for="username">Username</label>
+                  <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Enter username" name="username">
+              </div>
+              <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+              </div>
+              <input type="submit" class="btn btn-primary btn-sm" value="Login">
+          </form>
+          </div>
+          <div class="modal-footer">
+            <small class="text-muted">All traffic will be encrypted</small>
+          </div>
+        </div>
+      </div>
     </div>
 	</div>
 
