--- a/de/vorlesung/projekt/teamKoma/html/index.html
+++ b/de/vorlesung/projekt/teamKoma/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <title>New Ticket || INF16A Programmieren Go - Ticketsystem</title>
   </head>
