--- a/de/vorlesung/projekt/teamKoma/html/dashAll.html
+++ b/de/vorlesung/projekt/teamKoma/html/dashAll.html
@@ -8,7 +8,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="dashboardUnassigned.html">Unassigned Tickets</a>
             <a class="nav-item nav-link" href="dashboardAssigned.html">Tickets Assigned to me</a>
-            <a class="nav-item nav-link" href="dashboardAll.html">All Tickets (closed / open)</a>
+            <a class="nav-item nav-link active" href="dashboardAll.html">All Tickets (closed / open)<span class="sr-only">(current)</span></a>
           </div>
         </div>
       </nav>
