--- a/de/vorlesung/projekt/teamKoma/html/index.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/index.tmpl.html
@@ -35,7 +35,7 @@
     <br>
     <br>
     
-    {{template "content"}}
+    {{template "content" .}}
 
     <footer class="footer">
             <div class="container">
