--- a/de/vorlesung/projekt/teamKoma/html/dashboard.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/dashboard.tmpl.html
@@ -6,9 +6,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="dashboardUnassigned.html">Unassigned Tickets</a>
-            <a class="nav-item nav-link" href="dashboardAssigned.html">Tickets Assigned to me</a>
-            <a class="nav-item nav-link active" href="dashboardAll.html">All Tickets (closed / open)<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="./admin">Open Tickets</a>
+            <a class="nav-item nav-link" href="./assigned">Tickets Assigned to me</a>
+            <a class="nav-item nav-link active" href="./all">All Tickets<span class="sr-only"></span></a>
           </div>
         </div>
       </nav>
