--- a/de/vorlesung/projekt/teamKoma/html/dashboard.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/dashboard.tmpl.html
@@ -1,16 +1,26 @@
 {{define "content"}}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary w-100">
-        <a class="navbar-brand" href="index.html">New Ticket</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="./admin">Open Tickets</a>
-            <a class="nav-item nav-link" href="./assigned">Tickets Assigned to me</a>
-            <a class="nav-item nav-link active" href="./all">All Tickets<span class="sr-only"></span></a>
-          </div>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <h6 class="navbar-brand" style="margin-bottom:0px">Overview:</h6>
+        <div class="navbar-nav">
+          {{ if eq .Name "open"}}
+          <a  class="nav-item nav-link active" href="./admin">Open Tickets</a>
+          {{ else }}
+          <a  class="nav-item nav-link" href="./admin">Open Tickets</a>
+          {{ end }}
+          {{ if eq .Name "assigned"}}
+          <a class="nav-item nav-link active" href="./assigned">Tickets Assigned to me</a>
+          {{ else }}
+          <a class="nav-item nav-link" href="./assigned">Tickets Assigned to me</a>
+          {{ end }}
+          {{ if eq .Name "all"}}
+          <a class="nav-item nav-link active" href="./all">All Tickets</a>
+          {{ else }}
+          <a class="nav-item nav-link" href="./all">All Tickets</a>
+          {{ end }}
         </div>
+      </div>
+          <a type="button" class="btn btn-default navbar-btn pull-right" href="./">New Ticket</a>
       </nav>
       <div>
             <table class="table table-hover">
@@ -24,7 +34,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                    {{if .Tickets}}{{ range .Tickets}}
+                    {{if .Data}}{{ range .Data}}
                     <tr>
                       <td>{{ .ID}}</td>
                       <td>{{ .Subject}}</td>
