--- a/de/vorlesung/projekt/teamKoma/html/new.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/new.tmpl.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <h6 class="navbar-brand" style="margin-bottom:0px">Create New Ticket:</h6>
     </div>
-    <a type="button" class="btn btn-default navbar-btn pull-right" href="./admin">Admin Panel</a>
+    <a type="button" class="btn btn-default navbar-btn pull-right" href="./open">Admin Panel</a>
     </nav>
 <form action="/new" method="post" style="margin-top:25px">
         <div class="row">
