--- a/de/vorlesung/projekt/teamKoma/html/arow.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/arow.tmpl.html
@@ -2,7 +2,6 @@
 <tr>
   <th scope="col">#</th>
   <th scope="col">Subject</th>
-  <th scope="col">Processor</th>
   <th scope="col">Creation Date</th>
   <th scope="col">Items</th>
   <th scope="col">Last Modified</th>
@@ -13,10 +12,9 @@
 <tr>
     <td>{{ .ID}}</td>
     <td>{{ .Subject}}</td>
-    <td>{{ .Processor}}</td>
     <td>Datum erster Eintrag</td>
     <td>{{ len .Items}}</td>
-    <td>Datum vletzer Eintrag</td>
+    <td>Datum letzer Eintrag</td>
     <td>
         <a type="button" class="btn btn-default navbar-btn pull-right" href="./edit?ticket={{.ID}}">Edit</a>
     </td>
