--- a/de/vorlesung/projekt/teamKoma/html/orow.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/orow.tmpl.html
@@ -3,18 +3,19 @@
   <th scope="col">#</th>
   <th scope="col">Subject</th>
   <th scope="col">Items</th>
-  <th scope="col">Date</th>
+  <th scope="col">Creation Date</th>
   <th scope="col">Assign to me</th>
 </tr>
 {{end}}
 {{define "ticketrow"}}
 <tr>
+    {{$save := .}}
     <td>{{ .ID}}</td>
     <td>{{ .Subject}}</td>
     <td>{{ len .Items}}</td>
     <td>{{ .Items}}</td>
     <td>
-      <a type="button" class="btn btn-default navbar-btn pull-right" href="">Assign To Me</a>
+      <a type="button" class="btn btn-default navbar-btn pull-right" href="./assign?ticket={{.ID}}&user={{getUser}}">Assign To Me</a>
     </td>
   </tr>
 {{end}}
