--- a/de/vorlesung/projekt/teamKoma/html/arow.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/arow.tmpl.html
@@ -5,7 +5,7 @@
   <th scope="col">Creation Date</th>
   <th scope="col">Items</th>
   <th scope="col">Last Modified</th>
-  <th scope="col"></th>
+  <th scope="col">Edit</th>
 </tr>
 {{end}}
 {{define "ticketrow"}}
