--- a/de/vorlesung/projekt/teamKoma/html/orow.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/orow.tmpl.html
@@ -5,17 +5,20 @@
   <th scope="col">Items</th>
   <th scope="col">Creation Date</th>
   <th scope="col">Assign to me</th>
+  <th scope="col">Edit</th>
 </tr>
 {{end}}
 {{define "ticketrow"}}
 <tr>
-    {{$save := .}}
     <td>{{ .ID}}</td>
     <td>{{ .Subject}}</td>
     <td>{{ len .Items}}</td>
     <td>{{ .Items}}</td>
     <td>
       <a type="button" class="btn btn-default navbar-btn pull-right" href="./assign?ticket={{.ID}}&user={{getUser}}">Assign To Me</a>
+    </td>
+    <td>
+        <a type="button" class="btn btn-default navbar-btn pull-right" href="./edit?ticket={{.ID}}">Edit</a>
     </td>
   </tr>
 {{end}}
