--- a/de/vorlesung/projekt/teamKoma/html/ticket.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/ticket.tmpl.html
@@ -7,30 +7,81 @@
         <a type="button" class="btn btn-default navbar-btn pull-right" href="javascript:history.back()">Back</a>
       </nav>
       <br>
-    <table>
-        <thead>
-            <tr>
-                <th scope="col"></th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
+    <table class="table">
         <tbody>
             <tr>
-                <td>Creator</td>
-                <td>{{.Data}}{{.Data}}</td>
+                <td>Creator:</td>
+                <td>[Ticket ersteller Name]</td>
             </tr>
             <tr>
-                <td>Subject</td>
+                <td>Subject:</td>
                 <td>{{.Data.Subject}}</td>
             </tr>
             <tr>
-                <td>State</td>
+                <td>Description:</td>
+                <td>[Ticket erster eintrag beschreibung]</td>
+            </tr>
+                <tr style="background-color:lightgrey;">
+                    <form action="./edit?ticket={{.Data.ID}}" method="POST">
+                    <td>
+                        <label for="state">State:</label>
+                        <select name="state">
+                            <option value="0" {{if eq .Data.TicketState 0}} selected="selected" {{end}}>Open</option>
+                            <option value="1" {{if eq .Data.TicketState 1}} selected="selected" {{end}}>In Progress</option>
+                            <option value="2" {{if eq .Data.TicketState 2}} selected="selected" {{end}}>Closed</option>
+                        </select>
+                    </td>
+                    <td>
+                        <label for="processor">Processor:</label>
+                        <select name="processor">
+                            <option value="0" {{if eq .Data.Processor "Werner"}} selected="selected" {{end}}>{{.Data.Processor}}</option>
+                            <option value="1" >[Alle die net im Urlaub sind]</option>
+                        </select>
+                        <input type="submit" name="type" class="btn btn-primary" style="float: right;" value="Save">
+                    </td>
+                    </form>
+                </tr>
+                <tr>
+                    <form action="./edit/combine?ticket={{.Data.ID}}" method="post">
+                        <td>Add this ticket {{.Data.ID}} to</td>
+                        <td>
+                            <select name="toticket">
+                                <option value="1" >[Alle Tickets mit selben bearbeiter]</option>
+                            </select>
+                            <input type="submit" class="btn btn-secondary" style="float: right;" value="Combine">
+                        </td>
+                    </form>
+                </tr>
+            <tr>
+                <td colspan="2">
+                    <form action="./edit/add?ticket={{.Data.ID}}" method="POST">
+                        <h6>New Entry:</h6>
+                        <textarea name="description" style="width:100%;" rows="5" required></textarea>
+                        <div class="input-group">
+                            <input type="submit" name="type" class="btn btn-secondary" value="Save">
+                            <input type="text" name="email" class="form-control" style="text-align:right;" value="Emial from last entry">
+                            <input type="submit" name="type" class="btn btn-primary" value="Save & Inform">
+                        </div>
+                    </form>
+                </td>
+            </tr>
+            <tr>
                 <td>
-                    <select>
-                        <option value="0" {{if eq .Data.TicketState 0}} selected="selected" {{end}}>Open</option>
-                        <option value="1" {{if eq .Data.TicketState 1}} selected="selected" {{end}}>In Progress</option>
-                        <option value="2" {{if eq .Data.TicketState 2}} selected="selected" {{end}}>Closed</option>
-                    </select>
+                    Entries:
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul class="list-group">
+                        {{if .Data.Items}}{{ range .Data.Items}}
+                        <li class="list-group-item">
+                            <label><strong>{{.CreationDate.Format "02 Jan 2006  15:04"}}</strong></label>
+                            <p>{{.Text}}</p>
+                            <label style="background-color:lightgrey;">[Name vom ersteller]</label>&nbsp;&nbsp;
+                            <label style="background-color:#007bff;">{{.Email}}</label>
+                        </li>
+                        {{end}}{{end}}
+                    </ul>
                 </td>
             </tr>
         </tbody>
