--- a/de/vorlesung/projekt/teamKoma/html/arow.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/arow.tmpl.html
@@ -5,6 +5,7 @@
   <th scope="col">Creation Date</th>
   <th scope="col">Items</th>
   <th scope="col">Last Modified</th>
+  <th scope="col">Reopen</th>
   <th scope="col">Edit</th>
 </tr>
 {{end}}
@@ -12,9 +13,12 @@
 <tr>
     <td>{{ .ID}}</td>
     <td>{{ .Subject}}</td>
-    <td>Datum erster Eintrag</td>
+    <td>{{ .GetFirstEntryOfTicket.CreationDate.Format "02 Jan 2006  15:04"}}</td>
     <td>{{ len .Items}}</td>
-    <td>Datum letzer Eintrag</td>
+    <td>{{ .GetLastEntryOfTicket.CreationDate.Format "02 Jan 2006  15:04"}}</td>
+    <td>
+        <a type="button" class="btn btn-default navbar-btn pull-right" href="./edit/free?ticket={{.ID}}">Reopen</a>
+    </td>
     <td>
         <a type="button" class="btn btn-default navbar-btn pull-right" href="./edit?ticket={{.ID}}">Edit</a>
     </td>
