--- a/de/vorlesung/projekt/teamKoma/html/ticket.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/ticket.tmpl.html
@@ -11,7 +11,7 @@
         <tbody>
             <tr>
                 <td>Creator:</td>
-                <td>[Ticket ersteller Name]</td>
+                <td>{{.Data.FirstName}} {{.Data.LastName}}</td>
             </tr>
             <tr>
                 <td>Subject:</td>
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td>Description:</td>
-                <td>[Ticket erster eintrag beschreibung]</td>
+                <td>{{.Data.GetFirstEntryOfTicket.Text }}</td>
             </tr>
                 <tr style="background-color:lightgrey;">
                     <form action="./edit?ticket={{.Data.ID}}" method="POST">
@@ -34,8 +34,11 @@
                     <td>
                         <label for="processor">Processor:</label>
                         <select name="processor">
-                            <option value="0" {{if eq .Data.Processor "Werner"}} selected="selected" {{end}}>{{.Data.Processor}}</option>
-                            <option value="1" >[Alle die net im Urlaub sind]</option>
+                                {{ $holidayFree := getNonHolydaier }}
+                                {{ range $holidayFree }}
+                                <option value="{{.Name}}">{{.Name}}</option>
+                                {{ end }}
+                                <option selected value="{{ .Data.Processor }}" >{{ .Data.Processor }}</option>
                         </select>
                         <input type="submit" name="type" class="btn btn-primary" style="float: right;" value="Save">
                     </td>
@@ -59,7 +62,7 @@
                         <textarea name="description" style="width:100%;" rows="5" required></textarea>
                         <div class="input-group">
                             <input type="submit" name="type" class="btn btn-secondary" value="Save">
-                            <input type="text" name="email" class="form-control" style="text-align:right;" value="Emial from last entry">
+                            <input type="text" name="email" class="form-control" style="text-align:right;" value="{{.Data.GetLastEntryOfTicket.Email}}">
                             <input type="submit" name="type" class="btn btn-primary" value="Save & Inform">
                         </div>
                     </form>
