--- a/de/vorlesung/projekt/teamKoma/html/added.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/added.tmpl.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <h6 class="navbar-brand" style="margin-bottom:0px">Ticket created</h6>
     </div>
-    <a type="button" class="btn btn-default navbar-btn pull-right" href="./open">Admin Panel</a>
+    <a type="button" class="btn btn-primary navbar-btn pull-right" href="./open">Admin Panel</a>
   </nav>
   <div class="container">
     <br>
