--- a/de/vorlesung/projekt/teamKoma/html/dashboard.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/dashboard.tmpl.html
@@ -30,7 +30,7 @@
             <input type="submit" class="btn btn-secondary" style="float: right; margin-right: 15px;" value="Ab in den Urlaub!">
             {{ end }}
           </form>
-          <a type="button" class="btn btn-default navbar-btn pull-right" href="./">New Ticket</a>
+          <a type="button" class="btn btn-primary navbar-btn pull-right" href="./">New Ticket</a>
       </nav>
       <div>
             <table class="table table-hover">
