--- a/de/vorlesung/projekt/teamKoma/html/orow.tmpl.html
+++ b/de/vorlesung/projekt/teamKoma/html/orow.tmpl.html
@@ -15,10 +15,10 @@
     <td>{{ len .Items}}</td>
     <td>{{ .GetFirstEntryOfTicket.CreationDate.Format "02 Jan 2006  15:04"}}</td>
     <td>
-      <a type="button" class="btn btn-default navbar-btn pull-right" href="./assign?ticket={{.ID}}&user={{getUser}}">Assign To Me</a>
+      <a type="button" class="btn btn-primary navbar-btn pull-right" href="./assign?ticket={{.ID}}&user={{getUser}}">Assign To Me</a>
     </td>
     <td>
-        <a type="button" class="btn btn-default navbar-btn pull-right" href="./edit?ticket={{.ID}}">Edit</a>
+        <a type="button" class="btn btn-primary navbar-btn pull-right" href="./edit?ticket={{.ID}}">Edit</a>
     </td>
   </tr>
 {{end}}
